# multimodal-lakehouse-demo

./: .gitignore  DOCKER_START_GUIDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh  test_api.py
backend/: call_generator.py  config.py  demo_audio.py  distributed.py  gravitino_client.py  gravitino_server.py  gravitino_setup.py  iceberg_storage.py  image_pipeline.py  image_routes.py  image_vlm_client.py  lance_storage.py  llm_client.py  llm_parser.py  main.py  offline_pipeline.py  offline_routes.py  real_storage.py  sql_query.py
data/images/: generation_metadata.json  manifest.json
docs/: ARCHITECTURE.md  FRONTEND_IMAGE_E2E_TEST_HANDOFF.md  FRONTEND_IMAGE_E2E_TEST_RESULT.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
multimodal_toolkit/: README.md  pyproject.toml
multimodal_toolkit/multimodal_toolkit/: __init__.py  config.py
multimodal_toolkit/multimodal_toolkit/audio/: asr.py  embedding.py  prompt.py
multimodal_toolkit/multimodal_toolkit/pipeline/: __init__.py  analyze.py  embed.py  ingest.py  query.py
multimodal_toolkit/multimodal_toolkit/storage/: io.py
multimodal_toolkit/scripts/: init_s3.py
scripts/: check_image_policy_parity.py  generate_id_photo_samples.py
tests/: __init__.py  test_image_pipeline.py
